--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
   align-items: center;
   font-family: Roboto;
   color: #fff;
-  background: url("https://images.clarin.com/2017/12/01/Hy4RzW1bf_1256x620.jpg"), #000;
+  background: url("https://estaticos.muymascotas.es/media/cache/1140x_thumb/uploads/images/gallery/5adf3bf15bafe8c7763c986b/pinguinos-emperador-int.jpg"), #000;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -30,7 +30,12 @@ body{
   height: 100vh;
   font-size: 1rem;
 }
-section{
+article{
+  padding: 1em 5em;
+  border-bottom: .2em solid #fff;
+  text-align: justify;
+}
+section, article{
   position: relative;
   overflow: hidden;
   background: inherit;
@@ -39,7 +44,7 @@ section{
   display: flex;
   justify-content: space-around;
 }
-section::before{
+section::before, article::before{
   content: "";
   background: inherit;
   background-attachment: fixed;
@@ -49,7 +54,7 @@ section::before{
   right: -30%;
   top: -30%;
   bottom: -30%;
-  box-shadow: inset 0 0 0 400px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 0 400px rgba(0, 0, 0, 0.6);
   filter: blur(5px);
 }
 button{
@@ -74,7 +79,7 @@ button:hover>span{
   visibility: visible;
 }
 footer{
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 0.9);
   width: 100%;
   height: 7%;
   display: flex;
