--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ body{
   background: url("https://estaticos.muymascotas.es/media/cache/1140x_thumb/uploads/images/gallery/5adf3bf15bafe8c7763c986b/pinguinos-emperador-int.jpg"), #000;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 0vw 0vh;
-  background-attachment: fixed;
+  background-position: center;
+  background-attachment: initial;
   width: 100vw;
   height: 100vh;
 }
