--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ article{
   border-bottom: .2em solid #fff;
 }
 section, article{
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.9);
   position: relative;
   width: 100%;
   display: flex;
@@ -59,19 +59,20 @@ button{
 }
 span{
   visibility: hidden;
-  width: 100%;
-  height: 20%;
+  width: 15em;
+  height: .5em;
   opacity: 0.6;
   background: radial-gradient(ellipse, white 10%, transparent 50%);
   position: absolute;
   bottom: 10%;
-  left: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 button:hover>span{
   visibility: visible;
 }
 footer{
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, 1);
   width: 100%;
   height: 7%;
   display: flex;
@@ -80,7 +81,7 @@ footer{
   bottom: 0;
 }
 @media screen and (max-width: 700px){
-  article{
+  article, button{
     padding: 1em 1em;
   }
 }
