--- a/style.css
+++ b/style.css
@@ -32,11 +32,11 @@ body{
 }
 article{
   padding: 1em 5em;
-  border-bottom: .2em solid #fff;
 }
 section, article{
   background: rgba(0, 0, 0, 0.9);
   position: relative;
+  border-bottom: .1em solid #fff;
   width: 100%;
   display: flex;
   justify-content: space-around;
@@ -46,7 +46,7 @@ section::after{
   content: "";
   position: absolute;
   height: 100%;
-  border: .1em solid #fff;
+  border: .05em solid #fff;
 }
 button{
   padding: 2em 2em;
@@ -59,12 +59,12 @@ button{
 }
 span{
   visibility: hidden;
-  width: 15em;
-  height: .5em;
+  width: 20em;
+  height: 1em;
   opacity: 0.6;
   background: radial-gradient(ellipse, white 10%, transparent 50%);
   position: absolute;
-  bottom: 10%;
+  bottom: 20%;
   left: 50%;
   transform: translate(-50%, 0);
 }
@@ -72,9 +72,9 @@ button:hover>span{
   visibility: visible;
 }
 footer{
-  background: rgba(0, 0, 0, 1);
+  background: #1E88E5;
   width: 100%;
-  height: 7%;
+  height: 5%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -82,6 +82,10 @@ footer{
 }
 @media screen and (max-width: 700px){
   article, button{
-    padding: 1em 1em;
+    padding: 1.5em 1em;
+  }
+  span{
+    width: 15em;
+    height: .8em;
   }
 }
