--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ footer{
   align-items: center;
   justify-content: center;
   bottom: 0;
+  font-style: italic;
 }
 @media screen and (max-width: 700px){
   article, button{
