--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300');
+@import url('https://fonts.googleapis.com/css?family=Fredoka+One&display=swap');
+
 *{
   margin: 0;
   padding: 0;
@@ -30,6 +32,49 @@ body{
   width: 100vw;
   height: 100vh;
 }
+
+/* inicio */
+aside{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: #8bc34a;
+  color: #212121;
+  position: fixed;
+  z-index: 99;
+}
+p{
+  font-family: "Fredoka One";
+  font-size: 2em;
+  padding: 0 3em;
+  text-align: center;
+}
+div{
+  margin-top: 2em;
+  display: flex;
+}
+div>button{width: auto; padding: 1em 3em;}
+div>button:first-child{background: #212121;}
+div>button:nth-child(2){border:.2em solid #212121;}
+
+img{
+  width: 10em;
+  animation-name: bubble-anim;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+@keyframes bubble-anim {
+  0% {transform: scale(1); }
+  20% {transform: scaleY(0.95) scaleX(1.05); }
+  48% {transform: scaleY(1.1) scaleX(0.9); }
+  68% {transform: scaleY(0.98) scaleX(1.02); }
+  80% {transform: scaleY(1.02) scaleX(0.98); }
+  97%, 100% {transform: scale(1); }
+}
+
 article{
   padding: 1em 5em;
 }
