--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
   border: 0;
   box-sizing: border-box;
   outline: none;
-  transition: all 50ms ease-out;
 }
 a{
   color: #fff;
@@ -45,11 +44,12 @@ aside{
   z-index: 99;
   visibility: visible;
 
-  background: #8bc34a;
+  background: #48dbfb;
   color: #212121;
 
   width: 100%;
   height: 100%;
+  transition: all 1s ease-out;
 }
 /* texto del inicio */
 p{
@@ -63,8 +63,10 @@ div{
   display: flex;
 }
 div>button{width: auto; padding: 1em 3em;}
-div>button:first-child{background: #212121;}
-div>button:nth-child(2){border:.2em solid #212121;}
+div>button[name=aceptar]{background: #212121;}
+div>button[name=aceptar]:hover{background: #10ac84;}
+div>button[name=cancelar]{border:.2em solid #212121; color: #212121;}
+div>button[name=cancelar]:hover{background: #ee5253;}
 
 /* imagen + animacion */
 img{
@@ -155,7 +157,7 @@ footer{
 }
 
 /* etiquetas utilitarias */
-.hidden{display: none;}
+.hidden{transform: scaleY(0);}
 
 /* responsive */
 @media screen and (max-width: 700px){
