--- a/style.css
+++ b/style.css
@@ -114,7 +114,6 @@ form::after{
   height: 100%;
   border: .05em solid #fff;
 }
-
 button{
   padding: 2em 2em;
   background: none;
@@ -159,7 +158,7 @@ footer{
 }
 
 /* etiquetas utilitarias */
-.hidden{transform: scaleY(0);}
+.hide{transform: scaleY(0);}
 
 /* responsive */
 @media screen and (max-width: 700px){
