--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
   color: #fff;
 
 
-  background: url('https://ucf7b589d98b0bd0612b24bd3d44.previews.dropboxusercontent.com/p/thumb/AAiijoF6RB9KTMxH8PGLQhTDtY8AW9PCm7tpyQhhB8l-SdQTTO2qCDwI9Z30sxVTdilwmCCErd4AIIGDllwqOgR71QvBTjPafThqyPkpzkgq7iCHw2w-gRvbHD42okAUl1M8ax-hlRUl4Rp0Q27UbPrC7M7z6ubcQt3dU0hzZZSLgnRfYCXXz2LqexgJXnOlBuX0HBvjA8xs4YR7L07NTKRU3daGbxsCBhU24WMnE0Cqlx_21ygGoyEEqziz-zlJ85GdTu0yHkYmYSb0rgsZ6zPvq_BjT12vzSOlmxRWhIrwUrjc8GST_y1kpqCJafwA1peRAMC21Jjtq23k_J-OhdaGZPtRZSclUUqh1A7OZ0JMwQ/p.jpeg?fv_content=true&size_mode=5'), #48dbfb;
+  background: url('https://ucd2bfb13981ed3622c7c00ffe4d.previews.dropboxusercontent.com/p/thumb/AAhFpGFuZ_N0fLZ7t2lgHYkYx2EE40TQEK0Ox_GNfy-Un5nhuiH_EfS8SGNVbkBR1HA3BKVNH1NHysZKejNNx48cjVldllJNKGZdeoE4peveHNZ2I6P0icfSAkEKQaoJAhxM5OVtaSDuMiOnL8mDkzTfmnXUjMdAXLXfImXfNBYE4i4Ms5PbNIYvXkI18P2o4taF_ubRani_ov5B8hIQuNRpRqD-Hwa3lUNxdVSFJ_1ttHgwWMdbR9iKUOlr5PJyrjTWjvnoiQIl2pQKFfr5hpw05uPuvFkFo3ceYhq6-HERa2E_Kzs6zUrufNgFvwhM2waP5bQxQrc4UJN7Z6ifOAjkI3Z_nocdgwntTqrlqJ-Erw/p.jpeg'), #48dbfb;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top center;
