--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   border: 0;
   box-sizing: border-box;
   outline: none;
+  transition: all 1s ease;
 }
 a{
   color: #fff;
@@ -99,6 +100,7 @@ section{
 article{
   padding: 1em 5em;
   border-bottom: .1em solid #fff;
+  text-align: center;
 }
 
 form{
