--- a/style.css
+++ b/style.css
@@ -7,11 +7,11 @@
   border: 0;
   box-sizing: border-box;
   outline: none;
+  text-decoration: none;
   transition: all 1s ease;
 }
 a{
   color: #fff;
-  outline: none;
   border: 0;
 }
 
@@ -24,8 +24,7 @@ body{
   font-family: Roboto;
   font-size: 1em;
   color: #fff;
-
-
+/* esto hay que cambiar, la forma de poner el background */
   background: url('https://ucd2bfb13981ed3622c7c00ffe4d.previews.dropboxusercontent.com/p/thumb/AAhFpGFuZ_N0fLZ7t2lgHYkYx2EE40TQEK0Ox_GNfy-Un5nhuiH_EfS8SGNVbkBR1HA3BKVNH1NHysZKejNNx48cjVldllJNKGZdeoE4peveHNZ2I6P0icfSAkEKQaoJAhxM5OVtaSDuMiOnL8mDkzTfmnXUjMdAXLXfImXfNBYE4i4Ms5PbNIYvXkI18P2o4taF_ubRani_ov5B8hIQuNRpRqD-Hwa3lUNxdVSFJ_1ttHgwWMdbR9iKUOlr5PJyrjTWjvnoiQIl2pQKFfr5hpw05uPuvFkFo3ceYhq6-HERa2E_Kzs6zUrufNgFvwhM2waP5bQxQrc4UJN7Z6ifOAjkI3Z_nocdgwntTqrlqJ-Erw/p.jpeg'), #48dbfb;
   background-repeat: no-repeat;
   background-size: cover;
@@ -49,6 +48,7 @@ aside{
 
   background: #48dbfb;
   color: #212121;
+  opacity: 1;
 
   width: 100%;
   height: 100%;
@@ -61,8 +61,13 @@ p{
   text-align: center;
   padding: 0 3em;
 }
+span{
+  margin-top: 1em;
+  font-weight: bold;
+  text-align: center;
+}
 div{
-  margin-top: 2em;
+  margin-top: .8em;
   display: flex;
 }
 div>button{width: auto; padding: 1em 3em;}
@@ -127,11 +132,11 @@ form button:hover::before{
   opacity: 0.6;
 
   position: absolute;
-  bottom: 20%;
+  bottom: 15%;
   left: 50%;
   transform: translate(-50%, 0);
 
-  width: 20em;
+  width: 15em;
   height: 1em;
 }
 
@@ -149,7 +154,7 @@ footer{
 }
 
 /* etiquetas utilitarias */
-.hide{transform: translateY(-100vh);}
+.hide{display: none;}
 
 /* responsive */
 @media screen and (max-width: 700px){
