--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
   box-sizing: border-box;
   outline: none;
   text-decoration: none;
-  transition: all 1s ease;
 }
 a{
   color: #fff;
@@ -108,7 +107,11 @@ article{
   text-align: center;
 }
 video{
-  align-self: center;
+  position: fixed;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: -99;
+  width: 100%;
 }
 
 form{
