Cambios en html(Revisalo rami que puede que rompa todo je) y actualizacion de la documentacion de caminos esperando que pat haga mas de su magia

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
 
   background: #48dbfb;
   background-repeat: no-repeat;
-  background-size: cover;
+  /*background-size: cover;*/
   background-position: top center;
 
   width: 100vw;
