--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ body{
   align-items: center;
   justify-content: space-around;
   border-top: .2em solid #fff;
+  overflow: hidden;
 }
 #btnOpcion1, #btnOpcion2{
   width: 50%;
@@ -117,7 +118,7 @@ body{
   bottom: 8%;
   left: 50%;
   transform: translate(-50%, 0);
-  width: 15em;
+  width: 12em;
   height: 1em;
 }
 footer{
