--- a/style.css
+++ b/style.css
@@ -4,16 +4,14 @@
 body{
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
   align-items: center;
   font-family: Roboto, arial;
   font-size: 1em;
   color: #fff;
   background: #101010;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: auto;
   background-position: center;
-  width: 100vw;
 }
 
 #start{
@@ -124,8 +122,9 @@ body{
 footer{
   text-align: center;
   width: 100%;
-  padding: .3em 0;
+  padding: .4em 0;
   background: #212121;
+  align-self: flex-end;
 }
 .hide{display: none;}
 
@@ -139,4 +138,5 @@ footer{
   #btnOpcion1, #btnOpcion2{
     padding: 1.5em;
   }
+  #backImg{width: 50%;}
 }
