Revert "Merge branch 'master' of https://github.com/ramirobelmonte/CFLC"
This reverts commit c046c897c0d9dc171516909b6f902fab5ccefee9, reversing
changes made to d74f9c3cb1689c512375ba6d5945975b63a2a128.

HICECAGAAAA

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 body{
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   font-family: Roboto, arial;
   font-size: 1em;
@@ -79,7 +79,7 @@ body{
 }
 
 #backImg{
-  width: 100vw;
+  width: 100%;
   height: auto;
 }
 .aven{
@@ -136,5 +136,5 @@ footer{
   #btnOpcion1, #btnOpcion2{
     padding: 1.5em;
   }
-  #backImg{max-width: 70vw;}
+  #backImg{width: 50%;}
 }
