--- a/style.css
+++ b/style.css
@@ -3,45 +3,47 @@
 @import url('https://fonts.googleapis.com/css?family=Fredoka+One&display=swap');
 
 body{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   font-family: Roboto, arial;
   font-size: 1.1em;
   color: #fff;
   background: #222f3e;
-  min-height: 100vh;
 }
 
 #start{
-   display: flex;
-  flex-flow: column;
+  display: flex;
   align-items: center;
   justify-content: center;
-  position: fixed;
-  z-index: 99;
   visibility: visible;
-  top: 0;
   background: #48dbfb;
   color: #212121;
   opacity: 1;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
+}
+.mainA{
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: center;
+  width: 90%;
+}
+.mainB{
+  display: none;
 }
 .first, .second{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
+  padding: .5em 0;
 }
 .tyc{
   background: #fff;
   color: #212121;
   padding: .8em 1em;
-  margin: .2em 1.5em;
+  margin-bottom: 1em;
   border-radius: 1em;
-  height: 25vh;
+  height: 50vh;
   overflow: hidden;
   position: relative;
 }
@@ -50,22 +52,10 @@ body{
   height: 100%;
   font-family: 'lora', serif;
 }
-.tyc::after{
-  content: "";
-  position: absolute;
-  background: linear-gradient(transparent, #fff);
-  width: 100%;
-  height: 15%;
-  bottom: 0;
-  left: 0;
-}
 .first{
+  text-align: center;
   font-family: "Fredoka One";
   font-size: 1.7em;
-}
-.second{
-  font-weight: bold;
-  font-size: 1em;
 }
 .ctn{
   margin-top: .5em;
