--- a/reset.css
+++ b/reset.css
@@ -2,8 +2,7 @@ html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
+small, strike, strong, sub, sup, tt, var, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
@@ -20,4 +19,7 @@ time, mark, audio, video, button, * {
   outline: none;
 	width: auto;
 	height: auto;
+}
+b{
+	font-weight: bold;
 }
