--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body{
   color: #fff;
   background: #222f3e;
 }
-
 #start{
   display: flex;
   align-items: center;
@@ -127,6 +126,9 @@ body{
   margin: .2em;
   border-radius: 1em;
   background: #ffc107;
+  animation-name: boton;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
 }
 button:active{
   background: #4caf50;
@@ -139,6 +141,11 @@ footer{
   background: #5f27cd;
 }
 .hide{display: none;}
+
+@keyframes boton {
+  0%,100% { box-shadow: 0 0 0 .01em #00000024}
+  60% { box-shadow: 0 0 0 .6em #00000000}
+}
 
 @media screen and (min-width: 1000px) {
   body{
