--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body{
   flex-flow: row wrap;
   align-items: center;
   justify-content: center;
+  width: 100%;
 }
 .first, .second{
   display: flex;
