--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ body{
   object-fit: cover;
   position: relative;
   z-index: -99;
+  background: url('assets/img/load.gif') center no-repeat;
 }
 .aven{
   display: flex;
@@ -121,6 +122,7 @@ body{
 }
 #mainText{
   padding: .8em .8em;
+  font-family: 'lora', serif;
 }
 .ctnO{
   display: flex;
@@ -154,7 +156,33 @@ footer{
 }
 .hide{display: none;}
 
+.tercer{position: relative;}
+.tercer::before {
+		content: "Aia!";
+		transition: 0.5s ease;
+		left: 0;
+		right: 0;
+		margin: auto;
+		top: -15px;
+		font-size: 5em;
+    text-transform: none;
+		opacity: 0;
+    color: var(--negro);
+    position: absolute;
+	}
+.tercer:active::before{animation: omg-yes .5s;}
+@keyframes omg-yes {
+	50% {
+		opacity: 1;
+	}
+	100% {
+		top: -50px;
+    transform: rotate(20deg);
+	}
+}
 
+
+/* responsive */
 @media screen and (min-width: 600px) {
   #backImg{
     width: 80vw;
@@ -171,7 +199,7 @@ footer{
     overflow: hidden;
   }
   #mainText{
-    padding: 1em 1.5em;
+    padding: 2em;
   }
   .mainA{
     width: 100%;
