--- a/style.css
+++ b/style.css
@@ -108,7 +108,8 @@ body{
   object-fit: cover;
   position: relative;
   z-index: -99;
-  background: url('assets/img/load.gif') center no-repeat contain;
+  background: url('assets/img/load.gif') center no-repeat;
+  background-size: contain;
 }
 .aven{
   display: flex;
